<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2E8B57">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/start_game_btn"
        android:paddingBottom="5dp"/>

    <Button
        android:id="@+id/start_game_btn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/start_game_btn_text"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"
        android:layout_above="@+id/records_game_btn"
        android:onClick="startGame"/>

    <Button
        android:id="@+id/records_game_btn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/records_btn_text"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"
        android:layout_centerVertical="true"
        android:onClick="loadRecords"/>

    <Button
        android:id="@+id/close_game_btn"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/close_btn_text"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_margin="5dp"
        android:onClick="closeApp"
        android:layout_below="@+id/records_game_btn"/>

    <Button
        android:id="@+id/watch_news_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/about_text"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_margin="15dp"
        android:onClick="openAboutActivity"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/watch_visits_btn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/visit_label_text"
        android:textSize="12sp"
        android:layout_centerHorizontal="true"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_marginRight="15dp"
        android:onClick="openVisitsActivity"
        android:layout_below="@+id/watch_news_btn"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp" />

</RelativeLayout>